src/page-modules/assistant/assistant.module.css
.wrapper {
  background-color: var(--static-background-background_accent_0-background);
}
.homeLink__container {
  width: 100%;
  max-width: var(--maxPageWidth);
  padding: 0 var(--spacings-medium);
  margin: 0 auto;
}
.container {
  background-color: var(--static-background-background_accent_0-background);
  height: 100%;
  position: relative;
  display: grid;
  grid-template-areas:
    'main'
    'alternatives';
}

.main {
  grid-area: main;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: var(--spacings-xLarge);
  width: 100%;
  max-width: var(--maxPageWidth);
  padding: var(--spacings-xLarge);
  margin: 0 auto;
}

.input {
  display: flex;
  flex-direction: column;
}

.input > :last-child {
  margin-top: 0.375rem;
}

.button {
  text-align: center;
}

.heading {
  color: var(--static-background-background_accent_0-text);
  margin-bottom: var(--spacings-medium);
}

.alternativesWrapper {
  grid-area: alternatives;
  width: 100%;
  background-color: var(--static-background-background_accent_1-background);
  overflow: hidden;
}

.alternatives {
  display: flex;
  flex-direction: column;
  gap: var(--spacings-medium);
  padding: var(--spacings-xLarge);
  width: 100%;
  max-width: var(--maxPageWidth);
  margin: 0 auto;
  padding-bottom: 5.75rem;
}

.buttons {
  grid-area: alternatives;
  align-self: end;
  display: flex;
  justify-content: flex-end;
  gap: var(--spacings-medium);
  width: 100%;
  max-width: var(--maxPageWidth);
  margin: 0 auto;
  padding: 0 var(--spacings-xLarge) var(--spacings-xLarge)
    var(--spacings-xLarge);
  z-index: 10;
  position: absolute;
  left: 0;
  right: 0;
}

.searchInputButton {
  height: var(--height);
  border: none;
  background: none;
  padding: var(--spacings-small);
  border-bottom-right-radius: 0.75rem;
  border-top-right-radius: 0.75rem;
  cursor: pointer;
  display: flex;
  align-items: center;
}

@media (max-width: 650px) {
  .container {
    grid-template-areas:
      'main'
      'buttons'
      'alternatives';
  }

  .main {
    display: flex;
    flex-direction: column;
    padding-bottom: var(--spacings-xLarge) !important;
  }

  .buttons {
    grid-area: buttons;
    display: grid;
    grid-template-columns: 1fr 1fr;
    position: relative;
  }

  .alternatives {
    padding-bottom: var(--spacings-xLarge);
  }
}

.contentContainer {
  margin: 0 auto;
  max-width: var(--maxPageWidth);
  padding: var(--spacings-xLarge);
  display: flex;
  flex-direction: column;
  gap: var(--spacings-medium);
}

.tripResults {
  display: flex;
  flex-direction: column;
  gap: var(--spacings-large);
}

.nonTransitResult {
  display: flex;
  flex-wrap: wrap;
  gap: var(--spacings-medium);
}

.spanColumns {
  grid-column: 1 / -1;
}

